PIP-289 Update java to 17 and minor tidy up